test/runnable/record.nz
my-record record
	x nat
	y nat

main fut int32(args arr str)
	m = new<my-record> 1, 2
	assert: m.x == 1
	assert: m.y == 2
	resolved: 0
