test/compile-errors/record.nz
my-record record
	x int
	y int
	z int
	w int

make-my-record my-record()
	new
		x. 1
		y. 2
		zee. 3
		w. 4
